Cleanup for link_written() code.